# mate_ros2_projects

./: README.md
dummy_camera/: CMakeLists.txt  package.xml
dummy_camera/launch/: start.launch.py
dummy_camera/src/: dummy_camera.cpp
gazebo_demo/: CMakeLists.txt  package.xml
gazebo_demo/launch/: start.launch.py
gazebo_demo/models/lidar/: model.config  model.sdf
gazebo_demo/models/robot/: model.config  model.sdf
gazebo_demo/rviz/: gazebo_demo.rviz
gazebo_demo/world/: diff_drive_robot.world
qt_turtle/: CMakeLists.txt  package.xml  qt_turtle.pro
qt_turtle/include/qt_turtle/ros/: ros_node.hpp
qt_turtle/include/qt_turtle/ui/: mainwindow.h
qt_turtle/launch/: qt_turtle.launch.py  start.launch.py
qt_turtle/src/: main.cpp
qt_turtle/src/ros/: ros_node.cpp
qt_turtle/src/ui/: mainwindow.cpp
qt_turtle/ui/: mainwindow.ui
rviz_turtle/: CMakeLists.txt  package.xml
rviz_turtle/launch/: start.launch.py
rviz_turtle/rviz/: rviz_turtle.rviz
rviz_turtle/src/: pose_translator.cpp
rviz_turtle/urdf/: robot.urdf
turtle_catcher/: CMakeLists.txt  package.xml
turtle_catcher/include/turtle_catcher/: game_master.h  turtle1_controller.h
turtle_catcher/launch/: start.launch.py
turtle_catcher/src/: game_master.cpp  game_master_node.cpp  turtle1_controller.cpp  turtle1_controller_node.cpp
turtle_catcher/turtle_catcher/: CMakeLists.txt  package.xml
turtle_catcher/turtle_catcher/include/turtle_catcher/: game_master.h  game_master.hpp  turtle1_controller.h
turtle_catcher/turtle_catcher/launch/: start.launch.py
turtle_catcher/turtle_catcher/src/: game_master.cpp  game_master_node.cpp  turtle1_controller.cpp  turtle1_controller_node.cpp
turtle_catcher/turtle_catcher_interfaces/: CMakeLists.txt  package.xml
web_turtle/: CMakeLists.txt  package.xml
web_turtle/launch/: start.launch.py
web_turtle/scripts/: server.py
web_turtle/www/: index.html
web_turtle/www/js/: LICENSE.eventemitter2
